Изменил ajs-servers

--- a/ajs-servers.ini
+++ b/ajs-servers.ini
@@ -1,7 +1,7 @@
-[ajs_prod]                                                                                                                     ││ articus.limonka.site.conf              │   3341│дек  2  2021││*camenu                                 │  73811│сен 16 14:32│
-89.108.117.6                                                                                                                   ││ articus.su.conf                        │   3450│июн  2 13:23││ camenu.bak                             │  51509│апр 28  2022│
-172.16.104.5                                                                                                                   ││ daikon.conf                            │   3483│янв 29  2022││ db-ins                                 │  12722│ноя 14  2021│
-                                                                                                                               ││ dis.limonka.site.conf                  │   3851│ноя  1  2022││ db-install                             │  49724│сен 16 14:32│
-[ajs_mirr]                                                                                                                     ││ filin.arcafe.su.conf                   │   3485│апр  5  2023││ install-lemp                           │   6459│апр 28  2022│
-109.248.222.131                                                                                                                ││ limonka.arcafe.conf                    │   2602│сен  1  2021││ install-lemp-centos7.sh                │ 194705│дек  9  2021│
-172.16.104.3                                                                                                                   ││ mirror.kolobok.conf                    │   3504│окт 28  2022││@install-menu                           │     40│авг  5  2021│
+[ajs_prod]
+89.108.117.6
+172.16.104.5
+
+[ajs_mirr]
+109.248.222.131
+172.16.104.3
